--- a/experimental.css
+++ b/experimental.css
@@ -22,7 +22,7 @@ header
 
 #wrapper
 {
-	width=9000px;
+	
 }
 
 #left_content
@@ -30,11 +30,25 @@ header
 	float: left;
 	height:auto;
 	width:300px;
+	margin-top: 5px;
+	border: 1px solid;
+}
+
+#left_content ul
+{
+	-webkit-padding-start: 20px;
+}
+
+#context_box
+{
+	min-height: 40px;
+	border: 1px solid;
 }
 
 #right_content
 {
 	float:left;
+	margin-left: 30px;
 	height:auto;
 	width:600px;
 }
@@ -50,7 +64,7 @@ li
 
 .labels
 {
-	width:230px;
+	width:260px;
 	display:block;
 }
 
@@ -58,3 +72,4 @@ li
 {
 	font-size:0.8em;
 }
+
