before contextual text effort
sorting bug still remains

--- a/experimental.css
+++ b/experimental.css
@@ -1,11 +1,19 @@
 /**
  * @author Ravi
  */
+body
+{
+	font-family:Helvetica;
+}
+
 header
 {
+	border: 1px solid;
+	text-align:center;
+	background-color: #539DC2;
+	width: 800px;
 	font-size:2em;
-	margin-left: 200px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 }
 
 .divsvg
@@ -36,7 +44,7 @@ header
 
 #left_content ul
 {
-	-webkit-padding-start: 20px;
+	padding-left: 20px;
 }
 
 #context_box
@@ -45,7 +53,7 @@ header
 	border-top: 1px solid;
 	padding-left: 15px;
 	padding-top: 15px;
-	font-size: 14px;
+	font-size: 12px;
 }
 
 #right_content
@@ -73,7 +81,17 @@ li
 
 .side_text
 {
-	font-size:0.8em;
+	font-size:0.7em;
+}
+
+h4
+{
+	margin-bottom:0px;
+}
+
+input
+{
+	font-size:10px;
 }
 
 table 
@@ -82,6 +100,7 @@ table
 	border-spacing:0px;
 	padding: 0px;
 	font-size: 8px;
+	font-family: Helvetica;
 }
 
 
@@ -89,6 +108,11 @@ table tr
 {
 	border-spacing:0px;
 
+}
+
+table th
+{
+	font-size: 10px;
 }
 
 .ui-resizable-s 
